--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/_storybook",
-      "destination": "/_storybook/?path=/story/welcome--to-storybook"
+      "destination": "/_storybook/"
     }
   ]
 }
